deployment-rundeck3.yml
apiVersion: apps/v1
kind: Deployment
metadata:
        name: rundeck-site-helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rundeck-site-helm
      release: rundeck-site
  template:
    metadata:
      labels:
        app: rundeck-site-helm
        release: rundeck-site
    spec:
      containers:
      - name: rundeck-site-helm
        image: rundeck/rundeck:3.1.2
        imagePullPolicy: Always
        ports:
        - containerPort: 4440
