mysql-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-pod
  labels:
    name: mysql-pod
    app: rundeck-app
spec:
  containers:
  - name: mysql-pod
    image: mysql
    ports:
      - containerPort: 3306
