rundeck-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rundeck-app-pod
  labels:
    name: rundeck-app-pod
    app: rundeck-app
spec:
  containers:
  - name: rundeck-app
    image: rundeck/rundeck:3.1.2
    ports:
      - containerPort: 4440
