mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-rundeck
  labels:
    name: mysql-service
    app: rundeck-app
spec:
  selector:
    name: mysql-pod
    app: rundeck-app
  ports:
  - port: 3306
    targetPort: 3306
