rundeck-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rundeck-service
  labels:
    name: rundeck-service
    app: rundeck-app
spec:
  type: NodePort
  ports:
  - port: 4440
    targetPort: 4440
    nodePort: 30009
  selector:
    name: rundeck-service
    app: rundeck-app
